--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>D3 Page Template</title>
     <script type="text/javascript" src="d3/d3.v3.min.js"></script>
+    <!--<script type="text/javascript"  src="js/d3-time-format.min.js"></script>-->
     <link rel="stylesheet" type="text/css" href="css/div.css"/>
 
 </head>
